force-app/main/default/objects/CAZ_SolicitudDevolucion__c/CAZ_SolicitudDevolucion__c.object-meta.xml
<CustomObject>
    <label>Solicitud de devolución</label>
    <nameField>
        <displayFormat>SD-{00000}</displayFormat>
        <label>Folio Solicitud</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solicitudes de devoluciónes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>