force-app/main/default/objects/CAZ_SolicitudDevolucion__c/fields/CAZ_Account__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta (Distribuidor)</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Solicitudes_Devolucion</relationshipName>
    <type>Lookup</type>
</CustomField>