force-app/main/default/objects/CAZ_SolicitudDevolucion__c/fields/CAZ_Comentarios__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Comentarios__c</fullName>
    <description>Campo de uso exclusivo interno para anotaciones, seguimiento o justificaciones que el cliente no debe ver.</description>
    <label>Comentarios Internos</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>