force-app/main/default/objects/CAZ_SolicitudDevolucion__c/fields/CAZ_ComprobanteReferencia__c.field-meta.xml
<CustomField>
    <fullName>CAZ_ComprobanteReferencia__c</fullName>
    <label>Referencia de Comprobante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>