force-app/main/default/objects/CAZ_SolicitudDevolucion__c/fields/CAZ_Description__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Description__c</fullName>
    <label>Descripción detallada</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>