force-app/main/default/objects/CAZ_SolicitudDevolucion__c/fields/CAZ_EstadoSLA__c.field-meta.xml
<CustomField>
    <fullName>CAZ_EstadoSLA__c</fullName>
    <description>Estado operativo del SLA de Tesoreria. Se administra separado del estatus principal de la solicitud.</description>
    <label>Estado SLA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No iniciado</fullName>
                <default>true</default>
                <label>No iniciado</label>
            </value>
            <value>
                <fullName>En tiempo</fullName>
            </value>
            <value>
                <fullName>Vencido</fullName>
            </value>
            <value>
                <fullName>Cumplido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>