force-app/main/default/objects/CAZ_SolicitudDevolucion__c/fields/CAZ_FechaAtencionTesoreria__c.field-meta.xml
<CustomField>
    <fullName>CAZ_FechaAtencionTesoreria__c</fullName>
    <description>Fecha y hora en que Tesoreria marco atendida la solicitud de devolucion.</description>
    <label>Fecha Atencion Tesoreria</label>
    <type>DateTime</type>
</CustomField>