force-app/main/default/objects/CAZ_SolicitudDevolucion__c/fields/CAZ_FechaEnvioCC__c.field-meta.xml
<CustomField>
    <fullName>CAZ_FechaEnvioCC__c</fullName>
    <description>Fecha y hora en que el distribuidor envio la solicitud a Credito y Cobranza.</description>
    <label>Fecha Envio CC</label>
    <type>DateTime</type>
</CustomField>