force-app/main/default/objects/CAZ_SolicitudDevolucion__c/fields/CAZ_FechaEnvioTesoreria__c.field-meta.xml
<CustomField>
    <fullName>CAZ_FechaEnvioTesoreria__c</fullName>
    <description>Fecha y hora en que la solicitud fue enviada a Tesoreria para gestion bancaria.</description>
    <label>Fecha Envio Tesoreria</label>
    <type>DateTime</type>
</CustomField>