force-app/main/default/objects/CAZ_SolicitudDevolucion__c/fields/CAZ_FechaPago__c.field-meta.xml
<CustomField>
    <fullName>CAZ_FechaPago__c</fullName>
    <description>Fecha de pago o ejecucion bancaria de la devolucion.</description>
    <label>Fecha Pago</label>
    <type>Date</type>
</CustomField>