force-app/main/default/objects/CAZ_SolicitudDevolucion__c/fields/CAZ_FechaReenvio__c.field-meta.xml
<CustomField>
    <fullName>CAZ_FechaReenvio__c</fullName>
    <description>Fecha y hora del ultimo reenvio de la solicitud despues de corregir informacion.</description>
    <label>Fecha Reenvio</label>
    <type>DateTime</type>
</CustomField>