force-app/main/default/objects/CAZ_SolicitudDevolucion__c/fields/CAZ_FechaSolicitudInformacion__c.field-meta.xml
<CustomField>
    <fullName>CAZ_FechaSolicitudInformacion__c</fullName>
    <description>Fecha y hora en que Credito y Cobranza solicito informacion adicional al distribuidor.</description>
    <label>Fecha Solicitud Informacion</label>
    <type>DateTime</type>
</CustomField>