force-app/main/default/objects/CAZ_SolicitudDevolucion__c/fields/CAZ_ImporteDevolucion__c.field-meta.xml
<CustomField>
    <fullName>CAZ_ImporteDevolucion__c</fullName>
    <label>Importe a Devolver</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>