force-app/main/default/objects/CAZ_SolicitudDevolucion__c/fields/CAZ_MotivoDevolucion__c.field-meta.xml
<CustomField>
    <fullName>CAZ_MotivoDevolucion__c</fullName>
    <label>Motivo de Devolución</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proveedor erróneo</fullName>
            </value>
            <value>
                <fullName>Cuenta origen errónea</fullName>
            </value>
            <value>
                <fullName>Pago duplicado</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>