force-app/main/default/objects/CAZ_SolicitudDevolucion__c/fields/CAZ_MotivoRechazo__c.field-meta.xml
<CustomField>
    <fullName>CAZ_MotivoRechazo__c</fullName>
    <label>Motivos de Rechazo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cierre de mes fiscal</fullName>
            </value>
            <value>
                <fullName>Anticipo facturado y amortizado</fullName>
            </value>
            <value>
                <fullName>Importe menor al límite mínimo</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>