force-app/main/default/objects/CAZ_SolicitudDevolucion__c/fields/CAZ_MotivoSolicitudInformacion__c.field-meta.xml
<CustomField>
    <fullName>CAZ_MotivoSolicitudInformacion__c</fullName>
    <description>Motivo visible para el distribuidor cuando Credito y Cobranza solicita informacion adicional.</description>
    <label>Motivo Solicitud Informacion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>