force-app/main/default/objects/CAZ_SolicitudDevolucion__c/fields/CAZ_NombreCreador__c.field-meta.xml
<CustomField>
    <fullName>CAZ_NombreCreador__c</fullName>
    <formula>CreatedBy.FirstName &amp; &quot; &quot; &amp; CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre del Creador</label>
    <type>Text</type>
</CustomField>