force-app/main/default/objects/CAZ_SolicitudDevolucion__c/fields/CAZ_NumeroCuentaBancaria__c.field-meta.xml
<CustomField>
    <fullName>CAZ_NumeroCuentaBancaria__c</fullName>
    <label>Número de Cuenta Bancaria</label>
    <length>20</length>
    <type>Text</type>
</CustomField>