force-app/main/default/objects/CAZ_SolicitudDevolucion__c/fields/CAZ_NumeroProvisionJDE__c.field-meta.xml
<CustomField>
    <fullName>CAZ_NumeroProvisionJDE__c</fullName>
    <description>Folio o numero de provision generado en JDE para la devolucion.</description>
    <label>Numero Provision JDE</label>
    <length>80</length>
    <type>Text</type>
</CustomField>