force-app/main/default/objects/CAZ_SolicitudDevolucion__c/fields/CAZ_NumeroReenvios__c.field-meta.xml
<CustomField>
    <fullName>CAZ_NumeroReenvios__c</fullName>
    <description>Numero de veces que el distribuidor reenvio la solicitud despues de una solicitud de informacion.</description>
    <label>Numero Reenvios</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>