force-app/main/default/objects/CAZ_SolicitudDevolucion__c/fields/CAZ_OtroMotivoRechazo__c.field-meta.xml
<CustomField>
    <fullName>CAZ_OtroMotivoRechazo__c</fullName>
    <label>Otro Motivo de Rechazo</label>
    <type>TextArea</type>
</CustomField>