force-app/main/default/objects/CAZ_SolicitudDevolucion__c/fields/CAZ_ReferenciaBancaria__c.field-meta.xml
<CustomField>
    <fullName>CAZ_ReferenciaBancaria__c</fullName>
    <description>Referencia bancaria capturada por Tesoreria al gestionar la devolucion.</description>
    <label>Referencia Bancaria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>