force-app/main/default/objects/CAZ_SolicitudDevolucion__c/fields/CAZ_Respuesta__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Respuesta__c</fullName>
    <description>Respuesta de la solicitud y motivo en caso de rechazo</description>
    <label>Respuesta / Motivo de Rechazo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>