force-app/main/default/objects/CAZ_SolicitudDevolucion__c/fields/CAZ_SiguienteRecordatorio__c.field-meta.xml
<CustomField>
    <fullName>CAZ_SiguienteRecordatorio__c</fullName>
    <description>Fecha y hora del siguiente recordatorio automatico de Tesoreria. Se usa cuando la solicitud esta en proceso y el SLA sigue abierto.</description>
    <label>Siguiente Recordatorio</label>
    <type>DateTime</type>
</CustomField>