force-app/main/default/objects/CAZ_SolicitudDevolucion__c/fields/CAZ_Status__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Status__c</fullName>
    <label>Estatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Borrador</fullName>
                <default>true</default>
                <label>Borrador</label>
            </value>
            <value>
                <fullName>Por atender</fullName>
            </value>
            <value>
                <fullName>Pendiente de informacion</fullName>
            </value>
            <value>
                <fullName>En proceso</fullName>
            </value>
            <value>
                <fullName>Aprobado</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
            <value>
                <fullName>Completado</fullName>
            </value>
            <value>
                <fullName>Solicitud Completada</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>En revisión Tesorería</fullName>
                <isActive>false</isActive>
                <label>En revisión Tesorería</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>