force-app/main/default/objects/CAZ_SolicitudDevolucion__c/validationRules/Bloqueo_Edicion_Cerrada.validationRule-meta.xml
<ValidationRule>
    <fullName>Bloqueo_Edicion_Cerrada</fullName>
    <active>true</active>
    <description>Impide la modificacion de la solicitud una vez que ha sido completada, rechazada o cancelada.</description>
    <errorConditionFormula>AND(
  $Profile.Name &lt;&gt; &apos;System Administrator&apos;,
  $Profile.Name &lt;&gt; &apos;Administrador del sistema&apos;,
  OR(
    ISPICKVAL(PRIORVALUE(CAZ_Status__c), &quot;Completado&quot;),
    ISPICKVAL(PRIORVALUE(CAZ_Status__c), &quot;Rechazado&quot;),
    ISPICKVAL(PRIORVALUE(CAZ_Status__c), &quot;Cancelado&quot;)
  )
)</errorConditionFormula>
    <errorMessage>Esta solicitud ya se encuentra cerrada y no puede ser modificada por ningun usuario.</errorMessage>
</ValidationRule>