force-app/main/default/objects/CAZ_SolicitudDevolucion__c/validationRules/Validacion_Ejecutivo_En_Revision.validationRule-meta.xml
<ValidationRule>
    <fullName>Validacion_Ejecutivo_En_Revision</fullName>
    <active>true</active>
    <description>El Ejecutivo de Cuenta solo puede modificar la solicitud cuando se encuentra en estatus Por Atender (En revisión inicial).</description>
    <errorConditionFormula>AND(
  $Profile.Name = &apos;Ejecutivo de cuenta&apos;,
  NOT(ISNEW()),
  NOT(ISPICKVAL(PRIORVALUE(CAZ_Status__c), &apos;Por atender&apos;))
)</errorConditionFormula>
    <errorMessage>Como Ejecutivo de Cuenta, solo puedes modificar solicitudes que estén asignadas en la etapa de &quot;Por atender&quot;.</errorMessage>
</ValidationRule>