force-app/main/default/objects/CAZ_SolicitudDevolucion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CAZ_Account__c</columns>
    <columns>CAZ_ImporteDevolucion__c</columns>
    <columns>CAZ_MotivoDevolucion__c</columns>
    <columns>CAZ_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>