force-app/main/default/objects/CAZ_SolicitudDevolucion__c/listViews/Tesoreria_CAZ_SolicitudDevolucion1.listView-meta.xml
<ListView>
    <fullName>Tesoreria_CAZ_SolicitudDevolucion1</fullName>
    <filterScope>Queue</filterScope>
    <label>Tesorería</label>
    <queue>Tesoreria</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>